# xvisiotech_camera_examples

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  MANIFEST.in  PIP_INSTALL.md  PUBLISHING.md  PYPI_MIGRATION.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml  xvisio-camera-test.rviz
.cursor/skills/xvisio-release-workflow/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
cpp_core/: CMakeLists.txt
cpp_core/include/xvisio_core/: device.h
cpp_core/src/: device.cpp
docs/: hooks.py  index.md  installation.md  quickstart.md  ros2.md
docs/api/: device.md  index.md  types.md
docs/examples/: index.md  pose_imu.md  pose_transforms.md  visualization.md
drivers/: README.md  XVSDK_noble_amd64_20260406.deb
examples/: benchmark_pose_rate.py  demo_pose_imu.py  demo_pose_transforms.py  demo_pose_visualization.py
firmware/: xr50_20230331.img  xr50_20250109.img  xvisioUpdateImg
overrides/partials/: copyright.html
python/: README.md
python-wrapper/: PythonDemo.py  xvsdk.py
python/xvisio/: __init__.py  _highlevel.py  cli.py  types.py
python_bindings/: CMakeLists.txt
python_bindings/src/: bindings.cpp
ros2-wrapper/xv_ros2_msgs/srv/: GetPoseAt.srv  LoadMapAndSwithcCslam.srv
ros2-wrapper/xv_sdk_ros2/: package.xml
ros2-wrapper/xv_sdk_ros2/include/: xv_ros2_node.h
ros2-wrapper/xv_sdk_ros2/src/: xv_dev_wrapper.cpp  xv_ros2_node.cpp
ros2/docker/: Dockerfile
ros2/scripts/: open_shell.sh  setup_ros2_driver.sh  start_container.sh
ros2/xvsdk-ros2/xv_ros2_msgs/: package.xml
ros2/xvsdk-ros2/xv_ros2_msgs/msg/: ButtonMsg.msg  ColorDepth.msg  EventData.msg  OrientationStamped.msg
ros2/xvsdk-ros2/xv_ros2_msgs/srv/: ControllerStart.srv  ControllerStop.srv  GetDevices.srv  GetOrientation.srv  GetOrientationAt.srv  SaveMapAndSwitchCslam.srv
ros2/xvsdk-ros2/xv_sdk_ros2/: CMakeLists.txt
ros2/xvsdk-ros2/xv_sdk_ros2/include/: xv_dev_wrapper.h  xv_ros2_node.h
ros2/xvsdk-ros2/xv_sdk_ros2/launch/: xv_sdk_node_launch.py
ros2/xvsdk-ros2/xv_sdk_ros2/src/: main.cpp  xv_dev_wrapper.cpp  xv_ros2_node.cpp
scripts/: install_xvisio_linux.sh  setup_host.sh  setup_pypirc.sh  setup_ros2_driver.sh  start_container.sh  upload_pypi.sh  upload_testpypi.sh  version.py
test/: conftest.py  test_controller_reference_reset.py  test_hardware_pose_imu.py  test_highlevel_mock_backend.py
ubuntu-drivers/: 99-xvisio.rules
xvsdk-ros2/: README.md
xvsdk-ros2/xv_ros2_msgs/: CMakeLists.txt
xvsdk-ros2/xv_ros2_msgs/msg/: Controller.msg
xvsdk-ros2/xv_ros2_msgs/srv/: GetPose.srv
xvsdk-ros2/xv_sdk_ros2/: CMakeLists.txt
xvsdk-ros2/xv_sdk_ros2/include/: xv_dev_wrapper.h  xv_ros2_node.h
xvsdk-ros2/xv_sdk_ros2/launch/: xv_sdk_node_launch.py
xvsdk-ros2/xv_sdk_ros2/src/: main.cpp  xv_dev_wrapper.cpp  xv_ros2_node.cpp
